--- a/app/assets/stylesheets/ttt.css
+++ b/app/assets/stylesheets/ttt.css
@@ -1,5 +1,5 @@
 .container {
-  width: 950px;
+  width: 850px;
   margin: 0 auto;
 }
 
@@ -8,8 +8,8 @@
   text-align: center;
   margin: 0 auto;
   display: inline-block;
-  width: 230px;
-  height: 230px;
+  width: 205px;
+  height: 205px;
   border: thick solid black;
   border-radius: 10px;
   background: #C43737;
